Switch to file-based SFTP coordinator; update demo guide